# [#16805] Internal: Minor layout issue in categories view
git-svn-id: file:///Users/oratzes/svn/kunena@848 daf2aa89-cb5b-0410-b8ee-fe93ebc9b27d

--- a/trunk/1.5/components/com_kunena/template/default_ex/kunena.forum.css
+++ b/trunk/1.5/components/com_kunena/template/default_ex/kunena.forum.css
@@ -577,6 +577,9 @@
 #Kunena div.fb_thead-desc {
 	clear: left;
 }
+#Kunena div.fb_thead-moderators {
+	clear: left;
+}
 #Kunena div.fb_thead-child {
 	border-top: 1px dotted #D4C9AD;
 	margin-top: 4px;
